--- a/index.html
+++ b/index.html
@@ -17,19 +17,13 @@
 做我的，
 新主
 人！"/>
-  <meta property="og:type" content="book" />
-<meta property="og:url" content="http://www.iqing.in/book/13417/" />
-<meta property="og:title" content="契定终生" />
-<meta property="og:description" content="「才不会认你这个新主人呢！」白夜两手叉腰对我呵斥道。
-「噢，那我也不管你了。」我假装将头转了过去--才不想管你这个傲娇的人形剑刃呢。
-「呜，你又欺负我！」 
-我要换主人！换主人！
-谁收藏了我，
-我就认他，
-做我的，
-新主
-人！" />
-<meta property="og:image" content="https://image.iqing.in/cover/d9124744-7be7-4af5-9c22-2c74c249b820.jpg" />
+  <meta property="og:type" content="article">
+  <meta property="og:url" content="http://www.36kr.com/p/217392.html">
+  <meta property="og:title" content="UI设计新手？试一试这7条法则（Part 2） via 36氪(36Kr.COM)">
+  <meta property="og:description" content="产品UI设计入门">
+  <meta property="og:image" content="http://a.36krcnd.com/photo/2014/9b497e84ccbe2f7d67ad5408f2b62505.png!feature">
+  <meta name="weibo: article:create_at" content="2014-11-29 19:11:59 +0800">
+  <meta name="weibo: article:update_at" content="2015-03-10 21:17:25 +0800">
     <meta name="apple-itunes-app" content="app-id=1018140532"><!--[if lt IE 9]><script src="/js/css.js"></script><![endif]-->
     <link rel="stylesheet" href="/static/moe.538202b2.css">
 
