--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<script>document.write(navigator.userAgent)</script>
+<a href="iqing://game?body=%7B%22content_url%22%3A%22https%3A%2F%2Fwww.iqing.in%2Fyuki.html%22%2C%22url%22%3A%22https%3A%2F%2Fapi.iqing.in%2Fgame%2F2%2F%22%7D">链接</a>
