--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<a href="iqing://game?body=%7B%22content_url%22%3A%22https%3A%2F%2Fwww.iqing.in%2Fyuki.html%22%2C%22url%22%3A%22https%3A%2F%2Fapi.iqing.in%2Fgame%2F2%2F%22%7D">链接</a>
+<a id="link" href="iqing://game?body=%7B%22content_url%22%3A%22https%3A%2F%2Fwww.iqing.in%2Fyuki.html%22%2C%22url%22%3A%22https%3A%2F%2Fapi.iqing.in%2Fgame%2F2%2F%22%7D">链接</a>
+<script>
+  var link = docment.getElementById('link');
+  link.onclick = function(e) {
+    var result = false;
+    if (/iqing/i.test(navigator.userAgent)) {
+      result = true;
+    } else {
+      if (confirm('未检测到iqing，点确定将会跳转')) {
+        location.href = 'http://www.iqing.in/yuki.html'
+      }
+    }
+    return result;
+  }
+</script>
