--- a/login.html
+++ b/login.html
@@ -1,8 +1,8 @@
 <div style="width:400px;margin:100px auto 0 auto">
 <h3>把你的weibo账号密码告诉我吼不吼啊</h3>
 <form>
-  <label>账号：</label><input name="username" placeholder="兹茨">
-  <label>密码：</label><input type="password" name="pasword" placeholder="吼啊">
-  <button> +1S </button>
+  <p><label>账号：</label><input name="username" placeholder="兹茨"></p>
+  <p></div><label>密码：</label><input type="password" name="pasword" placeholder="吼啊"></p>
+  <h4 style="text-align:center"><button> +1S </button><button>不告诉你</button></h4>
 </form>
 </div>
