--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <h3>把你的weibo账号密码告诉我吼不吼啊</h3>
 <form>
   <p><label>账号：</label><input name="username" placeholder="兹茨"></p>
-  <p></div><label>密码：</label><input type="password" name="pasword" placeholder="吼啊"></p>
-  <h4 style="text-align:center"><button> +1S </button><button>不告诉你</button></h4>
+  <p><label>密码：</label><input type="password" name="pasword" placeholder="吼啊"></p>
+  <h4 style="text-align:center"><button style="font-size:20px;margin-right:1em"> +1S </button><button style="font-size:20px">不告诉你</button></h4>
 </form>
 </div>
