--- a/login.html
+++ b/login.html
@@ -3,6 +3,6 @@
 <form>
   <p><label>账号：</label><input name="username" placeholder="兹茨"></p>
   <p><label>密码：</label><input type="password" name="pasword" placeholder="吼啊"></p>
-  <h4 style="text-align:center"><button style="font-size:20px;margin-right:1em"> +1S </button><button style="font-size:20px">不告诉你</button></h4>
+  <p><button style="font-size:14px;margin-right:1em"> +1S </button><button style="font-size:14px">不告诉你</button></p>
 </form>
 </div>
